--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/loader.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="./scripts/index.js" defer></script>
     <title>Broken page</title>
 </head>
 
@@ -25,15 +26,13 @@
         <section class="images content"></section>
     </main>
     <div class="popup">
-        <button class="action close">&Cross;</button>
+        <button class="action close">&#10799;</button>
         <div class="content"></div>
     </div>
 
-    <script src="./scripts/index.js"></script>
-
     <template id="image">
         <a class="link" href="" data-id="">
-            <img src="" widht="250" alt=""></img>
+            <img src="" widht="250" alt="">
         </a>
     </template>
 
