fix: actionHandler, style

--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,15 @@
     </template>
 
     <template id="popup-image">
-        <div>
-            <figure>
+        <figure>
+            <div class="img__container">
                 <img src="" alt="">
-                <figcaption>
-                    Автор: <address class="author"></address>
-                </figcaption>
-            </figure>
-            <a class="link open" href="" target="_blank">Открыть в полном размере</a>
-        </div>
+            </div>
+            <figcaption>
+                Автор: <address class="author"></address>
+            </figcaption>
+        </figure>
+        <a class="link open" href="" target="_blank">Открыть в полном размере</a>
     </template>
 </body>
 
